--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "formik": "^2.2.9",
     "gatsby": "^4.0.0",
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-theme-codebushi": "^1.0.0",
     "postcss": "^8.3.8",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
